// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormTextarea With Custom Placeholder 1`] = `
<div
  className="mb-2"
>
  <textarea
    className="mb-2 "
    cols={30}
    id="Textarea with custom placeholder-textarea"
    maxLength={140}
    min={20}
    minLength={10}
    name="Textarea with custom placeholder"
    onChange={[Function]}
    placeholder="This is a custom placeholder"
    required={true}
    rows={10}
  />
</div>
`;

exports[`Storyshots Forms/FormTextarea With Errors 1`] = `
<div
  className="mb-2"
>
  <textarea
    className="mb-2 error"
    cols={30}
    id="Textarea with custom placeholder-textarea"
    maxLength={140}
    min={20}
    minLength={10}
    name="Textarea with custom placeholder"
    onChange={[Function]}
    placeholder="Bitte hier Text eingeben ..."
    required={true}
    rows={10}
  />
  <p
    className="text-red-500 text-sm"
  >
    Please use less than X characters
  </p>
  <p
    className="text-red-500 text-sm"
  >
    Please use more than Y characters
  </p>
</div>
`;

exports[`Storyshots Forms/FormTextarea With Label 1`] = `
<div
  className="mb-2"
>
  <label
    className="block mb-2 cursor-pointer transition hover:opacity-60"
    htmlFor="Textarea with label-textarea"
  >
    Some label
  </label>
  <textarea
    className="mb-2 "
    cols={30}
    id="Textarea with label-textarea"
    maxLength={140}
    min={20}
    minLength={10}
    name="Textarea with label"
    onChange={[Function]}
    placeholder="Bitte hier Text eingeben ..."
    required={true}
    rows={10}
  />
</div>
`;

exports[`Storyshots Forms/FormTextarea Without Label 1`] = `
<div
  className="mb-2"
>
  <textarea
    className="mb-2 "
    cols={30}
    id="Textarea without label-textarea"
    maxLength={140}
    min={20}
    minLength={10}
    name="Textarea without label"
    onChange={[Function]}
    placeholder="Bitte hier Text eingeben ..."
    required={true}
    rows={10}
  />
</div>
`;
